<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ico_login_logo"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_logo"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_id"
        android:textColor="@color/color_888888"
        android:textSize="13sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/txt_logo"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_square_border_dddddd"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textColorHint="@color/color_d1d1d1"
        android:hint="@string/login_id_hint"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="40dp"
        android:paddingStart="12dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center_vertical"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@id/txt_id"
        app:layout_constraintStart_toStartOf="@id/txt_id"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_passwd"
        android:textColor="@color/color_888888"
        android:textSize="13sp"
        android:layout_marginTop="14dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/edit_id"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_passwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_square_border_dddddd"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textColorHint="@color/color_d1d1d1"
        android:hint="@string/login_passwd_hint"
        android:inputType="textPassword"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="40dp"
        android:paddingStart="12dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center_vertical"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@id/txt_passwd"
        app:layout_constraintStart_toStartOf="@id/txt_passwd"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_autologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:src="@drawable/ico_check_off"
        app:layout_constraintTop_toBottomOf="@id/edit_passwd"
        app:layout_constraintStart_toStartOf="@id/edit_passwd"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_autologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_autologin"
        android:textColor="@color/color_333333"
        android:textSize="14sp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/img_autologin"
        app:layout_constraintBottom_toBottomOf="@id/img_autologin"
        app:layout_constraintStart_toEndOf="@id/img_autologin"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_square_back_000000"
        android:text="@string/login_login"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/img_autologin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>